Changed color of footer link to #cc6666

--- a/src/components/user/aq-user-login-panel.html
+++ b/src/components/user/aq-user-login-panel.html
@@ -150,7 +150,7 @@
             font-weight: 400;
         }
         .footer-link{
-            color:#F44336;
+            color: #cc6666;
             margin-left: 5px;
             font-size: 13px;
             font-family: 'Roboto', sans-serif;
