--- a/src/components/editor/aq-editor-sidebar-log.html
+++ b/src/components/editor/aq-editor-sidebar-log.html
@@ -2,6 +2,8 @@
 
 <link rel='import' href='../../../bower_components/iron-signals/iron-signals.html'>
 
+<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+
 <dom-module id='aq-editor-sidebar-log'>
 	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
@@ -16,7 +18,7 @@
 		};
 		
 		#logcontainer {
-			background-color: black; 
+			background-color: #323232;
 			color: white;
 			overflow-y: scroll;
 			--margin: auto 0;	
@@ -128,7 +130,8 @@
 
 	<style>
 		p {
-			font-size:11px;
+			font-family: 'Inconsolata', monospace;
+			font-size:13px;
 			color: white;
 			margin-bottom: 0px;
 		}
