--- a/src/components/analyze/aq-analyze-home-backtest-item2.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item2.html
@@ -13,6 +13,7 @@
 <link rel="import" href="../../../bower_components/iron-signals/iron-signals.html">
 <link rel="import" href="../common/aq-backtest-metric-item-list.html">
 <link rel="import" href="../common/aq-backtest-header-item.html">
+<script src="../../../resources/scripts/DateTime.js"></script>
 
 <dom-module id='aq-analyze-home-backtest-item2'>
     <template>
@@ -402,7 +403,7 @@
         });
 
     </script>
-    <script type="text/javascript" src="../common/DateTime.js"></script>
+    
 </dom-module>
 
 
