--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -14,6 +14,7 @@
 <link rel='import' href='./aq-check-authentication.html'>
 <link rel='import' href='./aq-cumret-linechart.html'>
 <link rel='import' href='./aq-aggregatedreturns-barchart.html'>
+<script type="text/javascript" src="./DateTime.js"></script>
 
 <dom-module id='aq-backtest-detail-item'>
     <style include="iron-flex iron-flex-alignment iron-positioning">
@@ -711,6 +712,6 @@
 			},
         });
     </script>
-    <script type="text/javascript" src="DateTime.js"></script>
+    
 </dom-module>
 
