--- a/src/components/common/aq-backtest-header-item.html
+++ b/src/components/common/aq-backtest-header-item.html
@@ -58,7 +58,7 @@
 				if(this.headerItems) {
 					var nItems = this.headerItems.length;
 
-					let eIdx;
+					var eIdx;
 					if(nItems > 0) {
 						if(this.narrow ) {
 							eIdx = nItems >=3 ? 3 : nItems;
