--- a/src/components/common/aq-backtest-metric-item-list.html
+++ b/src/components/common/aq-backtest-metric-item-list.html
@@ -78,7 +78,7 @@
 				if(this.modifiedItems) {
 
 					var nItems = this.modifiedItems.length;
-					let eIdx;
+					var eIdx;
 
 					if(nItems > 0) {
 						if(this.narrow) {
