Bug Fix: Corrected path to DateTime.js

--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -14,7 +14,7 @@
 <link rel='import' href='./aq-check-authentication.html'>
 <link rel='import' href='./aq-cumret-linechart.html'>
 <link rel='import' href='./aq-aggregatedreturns-barchart.html'>
-<script type="text/javascript" src="./DateTime.js"></script>
+<script src="../../../resources/scripts/DateTime.js"></script>
 
 <dom-module id='aq-backtest-detail-item'>
     <style include="iron-flex iron-flex-alignment iron-positioning">
