--- a/src/components/common/aq-code-comparison-element.html
+++ b/src/components/common/aq-code-comparison-element.html
@@ -1,25 +1,68 @@
-<link rel='import' href='../../common/aq-backtest-metric-item.html'>
-<link rel="import" href="../../../../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="../../../../bower_components/iron-pages/iron-pages.html">
-<script src="../../../../resources/scripts/DateTime.js"></script>
+<link rel='import' href='./aq-backtest-metric-item.html'>
+<link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../../../bower_components/iron-pages/iron-pages.html">
+<script src="../../../resources/scripts/DateTime.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/ace.js" type="text/javascript"></script>
-<script src="../../../../resources/scripts/ace-diff.js"></script>
-<script src="../../../../resources/scripts/diff-match-patch.js"></script>
+<script src="../../../resources/scripts/ace-diff.js"></script>
+<script src="../../../resources/scripts/diff-match-patch.js"></script>
 
-<dom-module id="aq-code-editor-element">
-    <link rel="stylesheet" href="aq-code-editor-element.css">
+<dom-module id="aq-code-comparison-element">
+    
     <style>
         :host {
             display: block;
+        }
+
+        #flex-container>div {
+            position: relative;
+            flex-grow: 1;
+        }
+        
+        #flex-container>div#acediff-gutter {
+            height: 45px;
+            top:-15px;
+            width: 3px;
+            background-color: transparent;
+        }
+
+        .acediff-class {
+            position: relative !important;
+            width: 100%;
+            height: 100%;
+        }
+
+        /*Gutter*/
+        .acediff-diff {
+            background-color: #5E35B1;
+            border-top: 1px solid #5E35B1;
+            border-bottom: 1px solid #5E35B1;
+            position: absolute;
+            z-index: 4;
+        }
+        /*Positioning the gutter*/
+        .acediff-diff.targetOnly {
+            height: 0px !important;
+            border-top: 1px solid #a2d7f2;
+            border-bottom: 0px;
+            position: absolute;
+        }
+
+        #acediff-gutter svg{
+            display: none;
+        }
+        
+        .acediff-copy-right,
+        .acediff-copy-left {
+            display: none;
         }
 
         #flex-container {
             display: inline-flex;
             flex-direction: row;
             position: relative;
-            width: var(--aq-code-editor-element-width, 100%);
+            width: var(--aq-code-comparison-element-width, 100%);
             /* these 3 lines are to prevents an unsightly scrolling bounce affect on Safari */
-            height: var(--aq-code-editor-element-height, 100%);
+            height: var(--aq-code-comparison-element-height, 100%);
             overflow: auto;
             justify-content: center;
             margin-top: 20px;
@@ -214,7 +257,7 @@
     </template>
     <script>
         Polymer({
-            is: "aq-code-editor-element",
+            is: "aq-code-comparison-element",
             properties: {
                 codeLeft: {
                     type: String,
